--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,30 @@
 [project]
 name = "signature-vol"
 version = "0.1.0"
-description = "Signature volatility research project"
+description = "Signature volatility"
 requires-python = ">=3.9,<3.10"
+
 dependencies = [
-    "iisignature",
-    "numpy>=1.7,<2",
-    "pandas",
-    "pandas_datareader",
-    "scikit-learn",
-    "matplotlib",
-    "typing-extensions",
-    "icecream",
-    "yfinance",
+    "iisignature==0.24",
+    "numpy==1.26.4",
+    "scikit-learn==1.6.1",
+    "matplotlib==3.9.4",
+    "typing-extensions==4.15.0",
+    "yfinance==0.2.66",
+    "marimo==0.17.6",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["code"]
-
 [tool.uv]
 dev-dependencies = [
-    "pytest>=7.0",
-    "ipykernel",
-    "jupyterlab",
+    "pytest==8.4.2",
     "ruff==0.12.8",
-    "pytest-cov",
-    "pytest-sugar",
-    "ipywidgets",
+    "pytest-cov==7.0.0",
+    "pytest-sugar==1.1.1",
+    "icecream==2.1.8",
 ]
 
 [tool.coverage.run]
